--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -19,7 +19,16 @@
             </div>
         </div>
         <!-- /.row -->
-
+        <h1>Post Here</h1>
+        <form method="post" action="#">
+          {% csrf_token %}
+          <p>
+              <input type="text"  name="title" class="form-control" placeholder="Post Title" required><br>
+              <textarea  name="content" class="form-control" placeholder="Enter Content" rows=5 required></textarea><br>
+              <input class="btn btn-success" type="submit" value="Add Post">
+          </p>
+        </form>
+        
         <div class="row">
             <div class="col-lg-3 col-md-6">
                 <div class="panel panel-primary">
