new paramters added. Db updated. New page for admin add posts. Edit posts with id =0 to be done. Author and datetime display on home page.

--- a/templates/admin/admin_base.html
+++ b/templates/admin/admin_base.html
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/admin">{{title}}</a>
+                <a class="navbar-brand" href="/admin/home">{{title}}</a>
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
@@ -156,13 +156,13 @@
                         <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
                     </li>
                     <li>
-                        <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-desktop"></i> Products <i class="fa fa-fw fa-caret-down"></i></a>
+                        <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-desktop"></i> Posts <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="demo" class="collapse">
                             <li>
-                                <a href="#"><i class="fa fa-fw fa-gear"></i> Category</a>
+                                <a href="/admin/posts/edit"><i class="fa fa-fw fa-gear"></i> Add New</a>
                             </li>
                             <li>
-                                <a href="#"><i class="fa fa-fw fa-edit"></i> Item</a>
+                                <a href="#"><i class="fa fa-fw fa-edit"></i> Categories</a>
                             </li>
                         </ul>
                     </li>
