--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -18,16 +18,6 @@
                 </ol>
             </div>
         </div>
-        <!-- /.row -->
-        <h1>Post Here</h1>
-        <form method="post" action="#">
-          {% csrf_token %}
-          <p>
-              <input type="text"  name="title" class="form-control" placeholder="Post Title" required><br>
-              <textarea  name="content" class="form-control" placeholder="Enter Content" rows=5 required></textarea><br>
-              <input class="btn btn-success" type="submit" value="Add Post">
-          </p>
-        </form>
         
         <div class="row">
             <div class="col-lg-3 col-md-6">
@@ -120,6 +110,8 @@
             </div>
         </div>
         <!-- /.row -->
+
+        <!-- All Posts Paginate on 10 -->
 
     </div>
     <!-- /.container-fluid -->
