--- a/templates/index.html
+++ b/templates/index.html
@@ -14,12 +14,12 @@
             </div>
                 
             <div class="col-xs-12 col-sm-10 blog-content">
-                <a href="#"><img class="img-responsive img-blog" src="{{MEDIA_URL}}/{{post.title_image}}" width="100%" alt="" /></a>
+                <a href="#"><img class="img-responsive img-blog" src="{{MEDIA_URL}}{{post.title_image}}" width="100%" alt="" /></a>
                 <h2><a href="blog-item.html">{{ post.title }}</a></h2>
                 <h3>{{ post.content }}</h3>
-                <a class="btn btn-primary readmore" href="blog-item.html">Read More <i class="fa fa-angle-right"></i></a>
+                <a class="btn btn-primary readmore" href="">Read More <i class="fa fa-angle-right"></i></a>
             </div>
-        </div>    
+        </div>
     </div><!--/.blog-item-->
 {% endfor %}
 
