--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,8 @@
     <!-- core CSS -->
     <link href="{{STATIC_URL}}css/bootstrap.min.css" rel="stylesheet">
     <link href="{{STATIC_URL}}css/font-awesome.min.css" rel="stylesheet">
-    <link href="{{STATIC_URL}}css/prettyPhoto.css" rel="stylesheet">
-    <link href="{{STATIC_URL}}css/animate.min.css" rel="stylesheet">
+<!--     <link href="{{STATIC_URL}}css/prettyPhoto.css" rel="stylesheet">
+ -->    <link href="{{STATIC_URL}}css/animate.min.css" rel="stylesheet">
     <link href="{{STATIC_URL}}css/main.css" rel="stylesheet">
     <link href="{{STATIC_URL}}css/responsive.css" rel="stylesheet">
     
@@ -68,11 +68,11 @@
                 
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="/">Home</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Anonymous <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li><a href="">Login/Register</a></li>
+                                <li><a href="login_register">Login/Register</a></li>
                             </ul>
                         </li>                      
                     </ul>
