--- a/templates/base.html
+++ b/templates/base.html
@@ -72,13 +72,80 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Anonymous <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li><a href="login_register">Login/Register</a></li>
+                                <li><a data-toggle="modal" data-target="#registerModal" href="#">Login/Register</a></li>
                             </ul>
                         </li>                      
                     </ul>
                 </div>
             </div><!--/.container-->
         </nav><!--/nav-->
+        <!-- Register Modal -->
+        <div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">Register</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form method="post" action="#" enctype="multipart/form-data">
+                            <input type="text" class="form-control" name="first_name" value="" placeholder="First name"><br>
+                            <input type="text" class="form-control" name="last_name" value="" placeholder="Last name"><br>
+                            <input type="text" class="form-control" name="email" value="" placeholder="Username / Email"><br>
+                            <input type="password" class="form-control" name="password" value="" placeholder="Password"><br>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-warning" data-dismiss="modal" data-toggle="modal" data-target="#loginModal">Login</button>
+                        <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-success">Save changes</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Login Modal -->
+        <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">Login</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <input type="text" class="form-control" name="email" value="" placeholder="Username / Email"><br>
+                            <input type="password" class="form-control" name="password" value="" placeholder="Password">
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal" data-toggle="modal" data-target="#forgetPasswordModal">Forget Password</button>
+                        <button type="button" class="btn btn-warning" data-dismiss="modal" data-toggle="modal" data-target="#registerModal">Register</button>
+                        <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-success">Login</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Forget Password Modal -->
+        <div class="modal fade" id="forgetPasswordModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">Forgot your Password?</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <input type="text" class="form-control" name="email" value="" placeholder="Username / Email"><br>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-success">Reset your password</button>
+                    </div>
+                </div>
+            </div>
+        </div>
         
     </header><!--/header-->
 
@@ -97,7 +164,7 @@
                 </div>
 
                 <aside class="col-md-4">
-    				<div class="widget categories">
+    				<!--div class="widget categories">
                         <h3>Recent Comments</h3>
                         <div class="row">
                             <div class="col-sm-12">
@@ -125,7 +192,7 @@
     							
                             </div>
                         </div>                     
-                    </div><!--/.recent comments-->
+                    </div><!--/.recent comments->
                      
 
                     <div class="widget categories">
@@ -140,7 +207,7 @@
                                 </ul>
                             </div>
                         </div>                     
-                    </div><!--/.categories-->
+                    </div><!--/.categories->
     				
     				<div class="widget archieve">
                         <h3>Archieve</h3>
@@ -154,7 +221,7 @@
                                 </ul>
                             </div>
                         </div>                     
-                    </div><!--/.archieve-->
+                    </div><!--/.archieve->
     				
                     <div class="widget tags">
                         <h3>Tag Cloud</h3>
@@ -261,7 +328,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    &copy; 2015 <a target="_blank" href="anistark.github.io" title="CopyLeft">AniStark</a>. All Rights Reserved.
+                    &copy; 2015 <a target="_blank" href="#" title="Copyright">The Garage</a>. All Rights Reserved.
                 </div>
                 <div class="col-sm-6">
                     <ul class="pull-right">
