--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
                 <div class="entry-meta">
                     <span id="publish_date">{{ post.last_update }}</span>
                     <span><i class="fa fa-user"></i> <a href="#">{{ post.author }}</a></span>
-                    <span><i class="fa fa-comment"></i> <a href="blog-item.html#comments">2 Comments</a></span>
-                    <span><i class="fa fa-heart"></i><a href="#">56 Likes</a></span>
+                    <!--span><i class="fa fa-comment"></i> <a href="blog-item.html#comments">2 Comments</a></span>
+                    <span><i class="fa fa-heart"></i><a href="#">56 Likes</a></span-->
                 </div>
             </div>
                 
@@ -17,7 +17,7 @@
                 <a href="#"><img class="img-responsive img-blog" src="{{MEDIA_URL}}{{post.title_image}}" width="100%" alt="" /></a>
                 <h2><a href="blog-item.html">{{ post.title }}</a></h2>
                 <h3>{{ post.content }}</h3>
-                <a class="btn btn-primary readmore" href="">Read More <i class="fa fa-angle-right"></i></a>
+                <a class="btn btn-primary readmore" href="{% url 'post' %}">Read More <i class="fa fa-angle-right"></i></a>
             </div>
         </div>
     </div><!--/.blog-item-->
