--- a/templates/base.html
+++ b/templates/base.html
@@ -87,19 +87,20 @@
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         <h4 class="modal-title" id="myModalLabel">Register</h4>
                     </div>
-                    <div class="modal-body">
-                        <form method="post" action="#" enctype="multipart/form-data">
+                    <form method="post" action="{% url 'user.register' %}" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <div class="modal-body">
                             <input type="text" class="form-control" name="first_name" value="" placeholder="First name"><br>
                             <input type="text" class="form-control" name="last_name" value="" placeholder="Last name"><br>
                             <input type="text" class="form-control" name="email" value="" placeholder="Username / Email"><br>
                             <input type="password" class="form-control" name="password" value="" placeholder="Password"><br>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-warning" data-dismiss="modal" data-toggle="modal" data-target="#loginModal">Login</button>
-                        <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-success">Save changes</button>
-                    </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-warning" data-dismiss="modal" data-toggle="modal" data-target="#loginModal">Login</button>
+                            <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-success">Save changes</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
