post specific page using post url

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
                 <a href="#"><img class="img-responsive img-blog" src="{{MEDIA_URL}}{{post.title_image}}" width="100%" alt="" /></a>
                 <h2><a href="blog-item.html">{{ post.title }}</a></h2>
                 <h3>{{ post.content }}</h3>
-                <a class="btn btn-primary readmore" href="{% url 'post' %}">Read More <i class="fa fa-angle-right"></i></a>
+                <a class="btn btn-primary readmore" href="{% url 'article' post.post_url %}">Read More <i class="fa fa-angle-right"></i></a>
             </div>
         </div>
     </div><!--/.blog-item-->
