--- a/templates/post.html
+++ b/templates/post.html
@@ -1,25 +1,21 @@
 {% extends 'base.html' %}
 {% block title %} Convergence {% endblock %}
 {% block content %}
-{% for post in posts %}
-    <div class="blog-item">
-        <div class="row">
-            <div class="col-xs-12 col-sm-2 text-center">
-                <div class="entry-meta">
-                    <span id="publish_date">07  NOV</span>
-                    <span><i class="fa fa-user"></i> <a href="#">John Doe</a></span>
-                    <span><i class="fa fa-comment"></i> <a href="blog-item.html#comments">2 Comments</a></span>
-                    <span><i class="fa fa-heart"></i><a href="#">56 Likes</a></span>
-                </div>
+<div class="blog-item">
+    <div class="row">
+        <div class="col-xs-12 col-sm-2 text-center">
+            <div class="entry-meta">
+                <span id="publish_date">{{post.last_update}}</span>
+                <span><i class="fa fa-user"></i> <a href="#">{{post.author}}</a></span>
+                <!--span><i class="fa fa-comment"></i> <a href="blog-item.html#comments">2 Comments</a></span>
+                <span><i class="fa fa-heart"></i><a href="#">56 Likes</a></span-->
             </div>
-                
-            <div class="col-xs-12 col-sm-10 blog-content">
-                <a href="#"><img class="img-responsive img-blog" src="{{STATIC_URL}}images/blog/blog1.jpg" width="100%" alt="" /></a>
-                <h2><a href="blog-item.html">{{ post.title }}</a></h2>
-                <h3>{{ post.content }}</h3>
-                <a class="btn btn-primary readmore" href="post.html">Read More <i class="fa fa-angle-right"></i></a>
-            </div>
-        </div>    
-    </div><!--/.blog-item-->
-{% endfor %}
+        </div>
+        <div class="col-xs-12 col-sm-10 blog-content">
+            <a href="#"><img class="img-responsive img-blog" src="{{STATIC_URL}}images/blog/blog1.jpg" width="100%" alt="" /></a>
+            <h2><a href="blog-item.html">{{ post.title }}</a></h2>
+            <h3>{{ post.content }}</h3>
+        </div>
+    </div>
+</div><!--/.blog-item-->
 {% endblock %}
