--- a/templates/post.html
+++ b/templates/post.html
@@ -12,7 +12,7 @@
             </div>
         </div>
         <div class="col-xs-12 col-sm-10 blog-content">
-            <a href="#"><img class="img-responsive img-blog" src="{{STATIC_URL}}images/blog/blog1.jpg" width="100%" alt="" /></a>
+            <a href="#"><img class="img-responsive img-blog" src="{{MEDIA_URL}}{{post.title_image}}" width="100%" alt="" /></a>
             <h2><a href="blog-item.html">{{ post.title }}</a></h2>
             <h3>{{ post.content }}</h3>
         </div>
