--- a/templates/user/user_base.html
+++ b/templates/user/user_base.html
@@ -33,7 +33,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-xs-4">
-                        <div class="top-number"><p>  Convergence</p></div>
+                        <a href="/"><div class="top-number"><p>  Convergence</p></div></a>
                     </div>
                     <div class="col-sm-6 col-xs-8">
                        <div class="social">
@@ -70,9 +70,15 @@
                     <ul class="nav navbar-nav">
                         <li><a href="/">Home</a></li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Anonymous <i class="fa fa-angle-down"></i></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Articles <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li><a data-toggle="modal" data-target="#registerModal" href="#">Login/Register</a></li>
+                                <li><a href="#">Add New</a></li>
+                            </ul>
+                        </li>  
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">User Name <i class="fa fa-angle-down"></i></a>
+                            <ul class="dropdown-menu">
+                                <li><a data-toggle="modal" data-target="#logout" href="#">Logout</a></li>
                             </ul>
                         </li>                      
                     </ul>
@@ -80,75 +86,27 @@
             </div><!--/.container-->
         </nav><!--/nav-->
         <!-- Register Modal -->
-        <div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade" id="logout" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         <h4 class="modal-title" id="myModalLabel">Register</h4>
                     </div>
-                    <form method="post" action="{% url 'user.register' %}" enctype="multipart/form-data">
+                    <form method="post" action="" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="modal-body">
-                            <input type="text" class="form-control" name="first_name" value="" placeholder="First name"><br>
-                            <input type="text" class="form-control" name="last_name" value="" placeholder="Last name"><br>
-                            <input type="text" class="form-control" name="user_name" value="" placeholder="UserName"><br>
-                            <input type="text" class="form-control" name="email" value="" placeholder="Email"><br>
-                            <input type="password" class="form-control" name="password" value="" placeholder="Password"><br>
+                            Are you sure?
+                            <!-- Show data of user's last view  -->
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-warning" data-dismiss="modal" data-toggle="modal" data-target="#loginModal">Login</button>
                             <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
-                            <button type="submit" class="btn btn-success">Save changes</button>
+                            <button type="submit" class="btn btn-success">Logout</button>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
-        <!-- Login Modal -->
-        <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="myModalLabel">Login</h4>
-                    </div>
-                    <div class="modal-body">
-                        <form>
-                            <input type="text" class="form-control" name="email" value="" placeholder="Username / Email"><br>
-                            <input type="password" class="form-control" name="password" value="" placeholder="Password">
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal" data-toggle="modal" data-target="#forgetPasswordModal">Forget Password</button>
-                        <button type="button" class="btn btn-warning" data-dismiss="modal" data-toggle="modal" data-target="#registerModal">Register</button>
-                        <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-success">Login</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Forget Password Modal -->
-        <div class="modal fade" id="forgetPasswordModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="myModalLabel">Forgot your Password?</h4>
-                    </div>
-                    <div class="modal-body">
-                        <form>
-                            <input type="text" class="form-control" name="email" value="" placeholder="Username / Email"><br>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-success">Reset your password</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        
     </header><!--/header-->
 
 
@@ -241,11 +199,11 @@
                         </ul>
                     </div><!--/.tags-->
     				
-    				<div class="widget blog_gallery">
+    				<!--div class="widget blog_gallery">
                         <h3>Our Gallery</h3>
                         <ul class="sidebar-gallery">
                             {% for post in posts %}
-                            <li><a href="{% url 'article' post.post_url %}"><img src="{{MEDIA_URL}}{{post.title_image}}" width="20%" alt="" /></a></li>
+                            <li><a href="#"><img src="{{MEDIA_URL}}{{post.title_image}}" width="20%" alt="" /></a></li>
                             {% endfor %}
                         </ul>
                     </div><!--/.blog_gallery-->
@@ -334,7 +292,7 @@
                 </div>
                 <div class="col-sm-6">
                     <ul class="pull-right">
-                        <li><a href="{% url 'home' %}">Home</a></li>
+                        <li><a href="">Home</a></li>
                         <li><a href="">About Us</a></li>
                         <li><a href="">Faq</a></li>
                         <li><a href="">Contact Us</a></li>
