--- a/static/css/main.css
+++ b/static/css/main.css
@@ -267,7 +267,7 @@ input.search-form:hover {
   margin-bottom: 0;
   background: #151515;
   padding: 15px 0;
-  padding-bottom: 0;
+  padding-bottom: 10px;
 }
 
  .navbar-nav{
