--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,7 @@
     <!-- core CSS -->
     <link href="{{STATIC_URL}}css/bootstrap.min.css" rel="stylesheet">
     <link href="{{STATIC_URL}}css/font-awesome.min.css" rel="stylesheet">
-<!--     <link href="{{STATIC_URL}}css/prettyPhoto.css" rel="stylesheet">
- -->    <link href="{{STATIC_URL}}css/animate.min.css" rel="stylesheet">
+    <link href="{{STATIC_URL}}css/animate.min.css" rel="stylesheet">
     <link href="{{STATIC_URL}}css/main.css" rel="stylesheet">
     <link href="{{STATIC_URL}}css/responsive.css" rel="stylesheet">
     
@@ -63,7 +62,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="{% url 'home' %}"><!--img src="{{STATIC_URL}}images/logo.png" alt="logo"-->Convergence</a>
+                    <a class="navbar-brand" href="{% url 'home' %}"><img src="{{STATIC_URL}}images/logo/convergence1.png" alt="logo" width='300px' height='78'></a>
                 </div>
                 
                 <div class="collapse navbar-collapse navbar-right">
@@ -256,6 +255,7 @@
                         <h3>Our Gallery</h3>
                         <ul class="sidebar-gallery">
                             {% for post in posts %}
+                            <!-- in url what thee post.podturl will do -->
                             <li><a href="{% url 'article' post.post_url %}"><img src="{{MEDIA_URL}}{{post.title_image}}" width="20%" alt="" /></a></li>
                             {% endfor %}
                         </ul>
@@ -357,7 +357,7 @@
 
     <script src="{{STATIC_URL}}js/jquery.js"></script>
     <script src="{{STATIC_URL}}js/bootstrap.min.js"></script>
-    <script src="{{STATIC_URL}}js/jquery.prettyPhoto.js"></script>
+    <!--script src="{{STATIC_URL}}js/jquery.prettyPhoto.js"></script-->
     <script src="{{STATIC_URL}}js/jquery.isotope.min.js"></script>
     <script src="{{STATIC_URL}}js/main.js"></script>
     <script src="{{STATIC_URL}}js/wow.min.js"></script>
