--- a/templates/admin/edit_posts.html
+++ b/templates/admin/edit_posts.html
@@ -20,12 +20,12 @@
         <h1>Post Here</h1>
         <form method="post" action="#" enctype="multipart/form-data">
           {% csrf_token %}
-          {{ form.as_p }}
+          <!-- {{ form.as_p }} -->
           <p>
-              <!-- <input type="text" name="title" class="form-control" placeholder="Post Title" required><br>
+              <input type="text" name="title" class="form-control" placeholder="Post Title" required><br>
               <input type="text" name="author" class="form-control" placeholder="Author" required><br>
               Title Image <input type="file" name="titleimgfile" class="form-control" placeholder="Choose Post Title Image" required><br>
-              <textarea  name="content" class="form-control" placeholder="Enter Content" rows=5 required></textarea><br> -->
+              <textarea  name="content" class="form-control" placeholder="Enter Content" rows=5 required></textarea><br>
               <input class="btn btn-success" type="submit" value="Add Post">
           </p>
         </form>
