--- a/templates/user/user_base.html
+++ b/templates/user/user_base.html
@@ -74,9 +74,9 @@
                             <ul class="dropdown-menu">
                                 <li><a href="#">Add New</a></li>
                             </ul>
-                        </li>  
+                        </li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">User Name <i class="fa fa-angle-down"></i></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.first_name }} <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
                                 <li><a data-toggle="modal" data-target="#logout" href="#">Logout</a></li>
                             </ul>
