font awesome included for WYSIWYG editor in admin edit post form

--- a/templates/admin/edit_posts.html
+++ b/templates/admin/edit_posts.html
@@ -2,6 +2,7 @@
 {% block title %} {{title}} {% endblock %}
 {% block content %}
 
+<link href="{{STATIC_URL}}css/font-awesome-new.css" rel="stylesheet">
 <link href="external/google-code-prettify/prettify.css" rel="stylesheet">
 <link href="{{STATIC_URL}}css/editor.css" rel="stylesheet">
 <script src="{{STATIC_URL}}js/jquery.hotkeys.js"></script>
